feat: switch to token.json

--- a/readme
+++ b/readme
@@ -1,1 +1,3 @@
 BOT URL: https://discordapp.com/oauth2/authorize?&client_id=710311836230090853&scope=bot&permissions=212032
+
+Criar um arquivo token.json contendo um objeto com o token do discord
